--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -88,6 +88,12 @@ md-slider {
   padding: 10px;
 }
 
+.surface-hovered:hover {
+  --md-elevation-level: 5;
+  --md-sys-color-shadow: var(--md-sys-color-primary);
+
+}
+
 .search-bar {
 color: var(--md-sys-color-primary);
 justify-content: space-around;
@@ -110,20 +116,22 @@ md-icon
   color: var(--md-sys-color-primary);
 }
 
+md-icon[filled] {
+  font-variation-settings: 'FILL' 1;
+}
+
 .servicio-surface
 {
   background-color: #FFF8F7;
   --md-elevation-level: 3;
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-direction: row;
-  padding: 5px 20px;
+  padding: 20px;
 }
 
 .adquisiciones-surface {
   background-color: #FFF8F7;
   --md-elevation-level: 3;
+  padding: 20px 20px 10px 20px;
+
 }
 
 md-filled-icon-button md-icon
@@ -139,40 +147,82 @@ md-filled-icon-button {
 .column {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  box-sizing: border-box;
-  padding: 10px;
+  
   gap: 20px;
+  width: max-content;
 }
 
 .row {
   display: flex;
   flex-direction: row;
   align-items: center;
-  box-sizing: border-box;
-  gap: 40px;
+  justify-items: flex-start;
+  gap: 20px;
+}
+
+.column-1 {
+  width: 30%;
+}
+
+.column-2 {
+  
 }
 
 .mini-card {
   background-color: var(--md-sys-color-secondary-container);
-  --md-elevation-level: 3;
+  --md-elevation-level: 5;
   gap: 10px;
   height: 80px;
-  border: 1px solid #c8c8c8;
 }
 
 .card-content {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  border: 1em;
 }
-.card-number {
-  font-weight: bold;
+
+.background-decoration {
+  position: relative;
+  position: initial;
+  bottom: 0;
+  width: 100%; /* Ajusta el ancho según sea necesario */
+  max-width: 500px; /* Ajusta el máximo ancho según sea necesario */
+  height: auto;
 }
-.card-text {
-  color: #333;
+
+.carousel-container {
+  width: 850px;
+  height: max-content;
+  background-color: transparent;
 }
+.carousel {
+  display: flex;
+  overflow-x: hidden;
+  scroll-snap-type: x mandatory ;
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+  transition: scroll-left 0.5s ease; /* Transición suave para el desplazamiento */
+  background-color: transparent;
+  padding: 0px 20px 20px 15px;
+}
+
+.servicio-1-2-1 {
+  padding: 0px 20px 20px 15px;
+}
+.carousel > book-card {
+  scroll-snap-align: center;
+  flex: 0 0 auto;
+  margin-right: 10px;
+  transition: transform 0.5s ease, opacity 0.5s ease; /* Transición suave para la transformación y opacidad */
+
+}
+.slider-container {
+  width: 100%;
+  position: relative;
+
+}
+
 
 /*
 
