--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -38,8 +38,10 @@ body {
     color: var(--md-secondary-tab-hover-icon-color);
     
 }
+
+
   #hero {
-    background: url('public/images/library.png') no-repeat center center/cover;
+    background: url('/public/images/library.png') no-repeat center center/cover;
     height: 500px;
     display: flex;
     flex-direction: column;
